# winter_project

./: .gitignore  LICENSE  README.md
commander/: CMakeLists.txt  package.xml  setup.py
commander/launch/: aprilTag_laptop.launch  aprilTag_ridgeback.launch  commanderNode.launch  launch_all.launch
commander/nodes/: manipulation.py
commander/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  commander_node.cpp  listener.cpp  talker.cpp
commander/srv/: commandSRV.srv
config/: rVizConfig.rviz
map/: lab_map.pgm  lab_map.yaml
simple_node/: CMakeLists.txt  CMakeListsCopy.txt  package.xml
simple_node/src/: hello.cpp  set_goal.cpp
